<resources>
    <string name="app_name">WeatherApp</string>
    <string name="details">Details :</string>
    <string name="humidity">Humidity</string>
    <string name="maxtemp">maxTemp</string>
    <string name="mintemp">minTemp</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="todo">TODO</string>
    <string name="_25_c">25 C</string>
    <string name="smoke">Smoke</string>
    <string name="_50">50</string>
    <string name="_50_">50%</string>
    <string name="_5">5</string>
    <string name="new_delhi">New Delhi</string>
</resources>