<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F9C9C"
    android:orientation="vertical"
    tools:context=".WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/backgroung_file"
            android:drawableStart="@drawable/location_city"
            android:gravity="center"
            android:hint="Enter Your City Name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_Weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weather_CityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="New Delhi"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_imageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_25_c"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/weather_Condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smoke"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/maxtemp"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mintemp"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather_Humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_50_"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/weather_MaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_25_c"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/weather_MinTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_25_c"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/weather_Pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_50"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/weather_Wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>